# pure

./: ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  INCREMENTAL_UPDATES_IMPLEMENTATION.md  PERFORMANCE_ANALYSIS.md  README.md  REFACTOR.md  RENDER_CACHING_IMPLEMENTATION.md  USER-GUIDE.md  demo.cast  test.ftml
.github/workflows/: actions.yml
benches/: performance.rs
examples/: bench_cursor.rs
examples/demo/: driver.rs  main.rs  player.rs  recorder.rs
src/: ansi.rs  app.rs  app_tests.rs  editor.rs  editor_display.rs  editor_display_undo_tests.rs  editor_tests.rs  file_dialog.rs  lib.rs  link_dialog.rs  main.rs  menu_bar.rs  ratatui_draw_context.rs  render.rs  snapshot_tests.rs  test_harness.rs  theme.rs
src/editor/: content.rs  content_tests.rs  cursor.rs  cursor_tests.rs  inspect.rs  link_tests.rs  links.rs  structure.rs  style_tests.rs  styles.rs
src/snapshots/: cut_removes_selection.snap
tests/: shared_editor.rs
tests/fixtures/: alpha.ftml  beta.md
tests/fixtures/sub/: nested-copper.md  nested-copy.md  nested.ftml
