[package]
name = "pure-tui"
version = "0.3.0"
edition = "2024"
description = "A modern terminal-based word processor for Markdown and other structured text documents"
authors = ["Rob Lillack <rob@lillack.net>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/roblillack/pure"

[dependencies]
anyhow = "1.0"
crossterm = "0.29.0"
ratatui = "0.29"
tdoc = "0.9.2"
unicode-width = "0.2.0"

[[bench]]
name = "performance"
harness = true
