[package]
name = "pure-tui"
version = "0.4.2"
edition = "2024"
description = "A modern terminal-based word processor for Markdown and other structured text documents"
authors = ["Rob Lillack <rob@lillack.net>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/roblillack/pure"

[package.metadata.release]
pre-release-replacements = [
    # Roll CHANGELOG's [Unreleased] over to the new version and re-seed a fresh
    # [Unreleased] above it (the Keep a Changelog + cargo-release marker idiom).
    # Order matters: the version/date/compare substitutions run first, *then*
    # the markers re-insert the literal "Unreleased"/"ReleaseDate" tokens so the
    # next release finds them again.
    { file = "CHANGELOG.md", search = "Unreleased", replace = "{{version}}" },
    { file = "CHANGELOG.md", search = '\.\.\.HEAD', replace = "...{{tag_name}}", exactly = 1 },
    { file = "CHANGELOG.md", search = "ReleaseDate", replace = "{{date}}" },
    { file = "CHANGELOG.md", search = "<!-- next-header -->", replace = "<!-- next-header -->\n\n## [Unreleased] - ReleaseDate", exactly = 1 },
    { file = "CHANGELOG.md", search = "<!-- next-url -->", replace = "<!-- next-url -->\n[Unreleased]: https://github.com/roblillack/pure/compare/{{tag_name}}...HEAD", exactly = 1 },
]

[dependencies]
anyhow = "1.0"
crossterm = "0.29.0"
ratatui = "0.29"
tdoc = { version = "0.10.0", default-features = false }
unicode-width = "0.2.0"

[dev-dependencies]
insta = "1.43"

[[bench]]
name = "performance"
harness = true
